--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/dist/app.css">
+  
   <title>Webpack</title>
 </head>
 <body>
@@ -20,6 +20,7 @@
         <div class="wrapper_example">
           <div class="container">
             <h1>Webpack</h1>
+            <img src="/assets/img/good-boy.jpg" height="300px" alt="">
           </div>
         </div>
       </section>
@@ -27,7 +28,8 @@
       <!-- section expamle 2 -->
       <section id="main">
         <div class="wrapper_example--second">
-          <div class="container">
+          <!-- note: always define your image in html code, that helps backenders to control these images -->
+          <div class="container" style="background-image:url(/assets/img/another-good-boy.jpg);">
             <h1>Example second section</h1>
           </div>
         </div>
@@ -40,6 +42,6 @@
   <!-- end main wrapper -->
   </div>
 
-  <script src="/dist/app.js"></script>
+  
 </body>
 </html>
